# SplitVCS

./: .gitignore  CMakeLists.txt  main.cpp
bindings/c/shared/: CMakeLists.txt  split_c_api.cpp  split_c_api.h
cli/: Command.h  CommandRegistry.cpp  CommandRegistry.h  OutStreamCommand.h  Parser.cpp  Parser.h
cli/commands/: AddCommand.cpp  InitCommand.cpp  TinyAssetCommand.cpp
docs/: Classes.mermaid
lib/split-asset/: CMakeLists.txt
lib/split-asset/src/atoms/: Asset.h
lib/split-asset/src/enums/: AssetType.cpp  EncodeType.cpp  EncodeType.h
lib/split-asset/src/utils/: AssetInfo.cpp  AssetInfo.h
lib/split-asset/src/utils/path/: PathUtils.cpp  PathUtils.h
lib/split-asset/src/utils/path/tests/: PathUtils.test.cpp
lib/split-diff/: CMakeLists.txt  design.drawio  main.cpp
lib/split-diff/analysis/: BackwardDelta.cpp  CMakeLists.txt  ImageScan.cpp
lib/split-diff/core/: Encoder.cpp  Encoder.h
lib/split-diff/playground/: CMakeLists.txt  main.cpp
lib/split-diff/split-log/: CMakeLists.txt
lib/split-diff/split-log/include/: SplitLog.h
lib/split-diff/split-log/src/main/: Logger.cpp  Logger.h
lib/split-diff/split-log/src/utils/: Color.h
lib/split-diff/src/atoms/: Blob.h
lib/split-diff/src/components/: DecoderFactory.h  DeltaCompressor.cpp  DeltaCompressor.h  EncoderFactory.h
lib/split-diff/src/enums/: AssetType.cpp  AssetType.h
lib/split-diff/src/features/binary/: ByteDecoder.cpp  ByteDecoder.h  ByteEncoder.cpp  ByteEncoder.h
lib/split-diff/src/features/dissolve/: AssetBlockBuilder.cpp  AssetBlockBuilder.h  AssetBlocking.cpp  AssetBlocking.h  AssetDissolver.cpp  AssetDissolver.h  BlockUnit.h
lib/split-diff/src/features/dissolve/tests/: AssetDissolve.test.cpp
lib/split-diff/src/features/images/: ImageDecoder.cpp  ImageDecoder.h  ImageEncoder.cpp  ImageEncoder.h
lib/split-diff/src/features/images/debug/: ImageDebugUtils.cpp
lib/split-diff/src/features/images/utils/: FormatSniffer.h  PixelCalculator.cpp  PixelCalculator.h  ReadAdapter.h
lib/split-diff/src/features/photoshop/: PsdDecoder.cpp  PsdDecoder.h  PsdEncoder.cpp  PsdEncoder.h  encoding.flow.mermaid
lib/split-diff/src/features/photoshop/tests/: PsdDecoder.test.cpp  PsdEncoder.test.cpp
lib/split-diff/src/features/photoshop/utils/: DecodeUtils.h  PsdLayerMetadataParser.h  PsdLayersMetadata.h  PsdMatAdapter.cpp  PsdMatAdapter.h
lib/split-diff/src/images/: ImageDecoder.cpp  ImageDecoder.h  ImageEncoder.cpp  ImageEncoder.h
lib/split-diff/src/interfaces/: IDecoder.h  IEncoder.h
lib/split-diff/src/utils/adapters/: OpenCvAdapter.h
lib/split-diff/src/utils/compress/: Bit7Archive.cpp  Bit7Archive.h
lib/split-diff/src/utils/compress/tests/: Bit7ZArchive.test.cpp
lib/split-diff/src/utils/hashing/: RandomHash.cpp  RandomHash.h
lib/split-diff/src/utils/psd/: ChannelUtils.h  PsdChannelSizeUpdater.cpp  PsdChannelSizeUpdater.h  TrackingFile.h
lib/split-diff/src/utils/stream/: OffsetBound.cpp  OffsetBound.h
lib/split-diff/tests/: PsdIntegration.test.cpp
lib/split-live/: CMakeLists.txt  README.md  main.cpp
lib/split-live/3D/: MeshAdapter.cpp  MeshAdapter.h  SceneLoader.cpp  SceneLoader.h
lib/split-live/core/: LiveEncoder.cpp  LiveEncoder.h
lib/split-live/playground/: CMakeLists.txt  main.cpp
lib/split-live/src/: LiveEncoder.cpp  LiveEncoder.h
lib/split-live/src/components/: CompressorFactory.h
lib/split-live/src/features/: ImageCompressor.cpp  ImageCompressor.h  TextCompressor.cpp  TextCompressor.h
lib/split-live/src/features/photoshop/: PsdUltraviolet.cpp  PsdUltraviolet.h
lib/split-live/src/features/photoshop/tests/: PsdUltraviolet.test.cpp
lib/split-live/src/interfaces/: ICompressor.h
lib/split-live/src/utils/: AssetInfo.h
lib/split-log/: CMakeLists.txt
lib/split-log/include/: SplitLog.h
lib/split-log/playground/: CMakeLists.txt  main.cpp
lib/split-log/src/main/: Logger.cpp  Logger.h
lib/split-log/src/utils/: Color.cpp  Color.h  Format.h
nodejs/: CMakeLists.txt  binding.gyp  bindings.cpp  package-lock.json  package.json
python/: CMakeLists.txt  bindings.cpp
rust/: CMakeLists.txt  Interface.cpp
src/: SplitInterface.cpp  SplitInterface.h
src/components/: Commit.cpp  Commit.h  Repository.cpp  Repository.h  Tree.h
src/features/: RepositoryStatus.cpp  RepositoryStatus.h
src/features/FastLiveAsset/: TinyAsset.cpp  TinyAsset.h
src/features/FastLiveAsset/tests/: TinyAsset.test.cpp
src/features/IgnoreList/: IgnoreList.cpp  IgnoreList.h
src/features/IgnoreList/tests/: IgnoreList.test.cpp
src/features/ManualCommit/: ManualCommiter.cpp  ManualCommiter.h
src/features/PackNegotiation/: CommitDiffer.cpp  CommitDiffer.h  DIFF_TYPE.h  PackNegotiation.classes.mermaid  PackNegotiation.cpp  PackNegotiation.flow.mermaid  PackNegotiation.h
src/stores/: CommitHistory.h  Index.cpp  Index.h  ObjectStore.cpp  ObjectStore.h  Pack.cpp  Pack.h
src/utils/: DeltaCompressor.cpp  Hashing.h
src/utils/Fs/: DualStream.h  FsMetadata.cpp  FsMetadata.h  PackOptimizer.cpp  PackOptimizer.h
src/utils/Fs/tests/: FsMetadata.test.cpp
src/utils/Parsers/: ParserToString.cpp  ParserToString.h
src/utils/String/: StringUtils.h
src/utils/tests/: Hashing.test.cpp
test_dissolve/: file.txt
tests/: Checkout.Test.cpp  CommitDiffer.Test.cpp  HandlingImage.Test.cpp  IndexTest.cpp  ObjectStoreTest.cpp  PackNegotiation.Test.cpp  PackTest.cpp  RepositoryStatusTest.cpp
